--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
----
-layout: default
-title: test title
----
-<p>Hello world!</p>
+<!DOCTYPE html>
+<html>
+<head>
+　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+　<title>L-Movingon</title>
+</head>
+<body>
+
+	<p>Hello World!</p>
+	<p>I'm index.html</p>
+
+</body>
+</html>
