--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 　<title>L-Movingon</title>
 </head>
 <body>
-
-	<p>Hello World!</p>
-	<p>I'm index.html</p>
+	<script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_tr.js"></script>
 
 </body>
 </html>
