--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　<title>L-Movingon</title>
+　	<meta charset="UTF-8" />
+　	<title>L-Movingon</title>
+	<script type="text/javascript" src="javascript/easeljs-0.7.0.min.js"></script>
+	<script type="text/javascript" src="javascript/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-	<script charset="Shift_JIS" src="http://chabudai.sakura.ne.jp/blogparts/honehoneclock/honehone_clock_tr.js"></script>
+<body onLoad="init()">
+	<canvas id="rocket">Your browser do not support HTML5</canvas>
 
 </body>
 </html>
