--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body onLoad="init()">
 	<canvas id="rocket">Your browser do not support HTML5</canvas>
-
+	<a id="roaming" href="#">MOVING</a>
 </body>
 </html>
